# opus_06

./: .travis.yml  CMakeLists.txt  Doxyfile  annotated.html  classes.html  classmatrix_1_1Matrix-members.html  classmatrix_1_1Matrix.html  classmatrix_1_1Slice-members.html  classmatrix_1_1Slice.html  classmatrix_1_1Slice_1_1Iterator-members.html  classmatrix_1_1Slice_1_1Iterator.html  classmatrix_1_1Slice_3_01T_00_01default__value_00_011_01_4-members.html  classmatrix_1_1Slice_3_01T_00_01default__value_00_011_01_4.html  dir_cb851817d6f77244316f2683559617a2.html  files.html  functions.html  functions_func.html  functions_type.html  graph_legend.html  index.html  main.cpp  matrix_8h.html  matrix_8h__incl.map  matrix_8h__incl.md5  matrix_8h_source.html  namespacematrix.html  namespacemembers.html  namespacemembers_type.html  namespaces.html  slice_8h.html  slice_8h__dep__incl.map  slice_8h__dep__incl.md5  slice_8h__incl.map  slice_8h__incl.md5  slice_8h_source.html
tests/: CMakeLists.txt  integral.sh  stdout.tst  test_toolbox.cpp
toolbox/: CMakeLists.txt  matrix.h  slice.h
toolbox/include/: matrix.h  slice.h
